2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.AddIns/PackageExtensionNode.cs,
	  MonoDevelop.Core/SystemAssemblyService.cs: Don't use the extension node
	  Id to identify packages because that Id must be unique, but there can be
	  several packages with the same name but different version.

2007-09-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/XmlReadHelper.cs, MonoDevelop.Core/Properties.cs: Removed
	  some debug code.

2007-09-07   <> 

	* MonoDevelop.Core/Properties.cs, MonoDevelop.Core/XmlReadHelper.cs: Fixed
	  bug in properties. Made XmlReadHelper more verbose on some possible
	  errors.

2007-09-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core/DefaultLoggingService.cs: Change default log level to
	  "WARN". Verbosity doesn't increase substantially, and the warning
	  messages do generally indicate a problem.

2007-09-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/Properties.cs, MonoDevelop.Core/XmlReadHelper.cs: It's
	  now possible to specifiy more than one possible end node in the
	  XmlReadHelper class. 
	
	  The Properties class now generates root node called "Serialized"
	  (Properties.SerializedNode) for the custom xml serialized documents -
	  they do not need to generate an own root node anymore (therefore saving
	  some space).

2007-09-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/Properties.cs, MonoDevelop.Core/ICustomXmlSerializer.cs:
	  Worked on property infrastructure - serialization can now be customized
	  using the ICustomXmlSerializer interface.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com>

	* MonoDevelop.Core/Properties.cs: Fix compiler warnings. Note: one is 
	  clearly a typo, but the fix changes the logic.

2007-09-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/XmlReadHelper.cs: Changed the XmlReadHelper behavior - it
	  now handles the case that the first node is equal to the closing tag
	  node.

2007-09-04   <> 
